AC_INIT([zbx_tools], [0.1], [mailto.vpv@gmail.com])
AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(include/config.h)

CXXFLAGS='-Wall -Wextra -pedantic --std=c++11 -g'

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_OUTPUT([
        Makefile
        src/Makefile
        src/libs/Makefile
        src/libs/api/Makefile
        src/libs/buffer/Makefile
        src/libs/config/Makefile
        src/libs/curl_cl/Makefile
        src/libs/frozen/Makefile
        src/libs/logging/Makefile
        src/libs/mysql/Makefile
        src/llid/Makefile
        src/zbx_mail/Makefile
	src/zbx_cfm/Makefile
        ])
